--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^4.11.0",
+    "@prisma/client": "^5.11.0",
+    "@prisma/extension-accelerate": "^1.0.0",
     "@types/lodash": "^4.14.191",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.1",
     "date-fns": "^2.29.3",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "lodash": "^4.17.21",
+    "mongodb": "^6.5.0",
     "next": "^13.2.4",
     "next-auth": "^4.21.1",
     "react": "^18.2.0",
@@ -38,6 +40,7 @@
     "@types/bcrypt": "^5.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "prisma": "^5.11.0",
     "tailwindcss": "^3.2.7"
   }
 }
